[gd_scene load_steps=12 format=3 uid="uid://dso4tsbuys7co"]

[ext_resource type="Script" path="res://Core/UI/MainMenu/Tutorials/tutorials.gd" id="1_blmex"]
[ext_resource type="Script" path="res://Core/UI/MainMenu/Tutorials/tutorial_button.gd" id="2_y2tof"]
[ext_resource type="Texture2D" uid="uid://b1vs0okbp4qj2" path="res://icon.svg" id="3_atk4j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_glv7p"]
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1a6n"]
content_margin_left = 32.0
content_margin_top = 4.0
content_margin_right = 32.0
content_margin_bottom = 4.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_bottom = 2
border_color = Color(0.921569, 0.898039, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojynu"]
content_margin_left = 32.0
content_margin_top = 4.0
content_margin_right = 32.0
content_margin_bottom = 4.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_bottom = 2
border_color = Color(0.921569, 0.898039, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3vbn"]
content_margin_left = 32.0
content_margin_top = 4.0
content_margin_right = 32.0
content_margin_bottom = 4.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ukvj"]
content_margin_left = 10.0
content_margin_top = 9.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.466667, 0.431373, 0.392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tddpd"]
content_margin_left = 10.0
content_margin_top = 9.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.921569, 0.898039, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tusgg"]
content_margin_left = 10.0
content_margin_top = 9.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.921569, 0.898039, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgpbp"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.921569, 0.898039, 0.729412, 1)

[node name="Tutorials" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_blmex")

[node name="OuterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TabBarPanel" type="Panel" parent="OuterContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_glv7p")

[node name="TabBar" type="TabBar" parent="OuterContainer/TabBarPanel"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_l1a6n")
theme_override_styles/tab_hovered = SubResource("StyleBoxFlat_ojynu")
theme_override_styles/tab_unselected = SubResource("StyleBoxFlat_b3vbn")
tab_alignment = 1
tab_count = 2
tab_0/title = "Gameplay"
tab_1/title = "Units"

[node name="SectionsContainer" type="HBoxContainer" parent="OuterContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TutorialsButtonsListContainer" type="Control" parent="OuterContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="TutoriaslButtonsListScroll" type="ScrollContainer" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -360.0
offset_top = 64.0
offset_bottom = 377.0
grow_horizontal = 0

[node name="TutorialsButtonsList" type="VBoxContainer" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="Game" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Game"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Initial phase of a game, in which you have 20 seconds to prepare yourself by positioning the pieces in your base, buying new pieces in the store or choosing a new skill."

[node name="Matches" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Matches"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Initial phase of a game, in which you have 20 seconds to prepare yourself by positioning the pieces in your base, buying new pieces in the store or choosing a new skill."

[node name="Preparation" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Preparation"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Initial phase of a match, in which you have 20 seconds to prepare yourself by positioning the pieces in your {url}{Base, base}, buying new pieces in the {url}{Store, store} or {url}{SkillPicking, choosing a new skill}."

[node name="Base" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Base"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Cells in the game in which you can place your pieces at the start of each {url}{Matches, match}."

[node name="Store" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Store"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Interface that appears at the start of each match. It shows your current money and random units you can buy to be in your {url}{Base, base}."

[node name="SkillPicking" type="Button" parent="OuterContainer/SectionsContainer/TutorialsButtonsListContainer/TutoriaslButtonsListScroll/TutorialsButtonsList"]
texture_filter = 2
custom_minimum_size = Vector2(335, 0)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.0313726, 0.00392157, 0.0509804, 1)
theme_override_colors/font_disabled_color = Color(0.921569, 0.898039, 0.729412, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_2ukvj")
theme_override_styles/hover = SubResource("StyleBoxFlat_tddpd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_tusgg")
theme_override_styles/disabled = SubResource("StyleBoxFlat_tddpd")
text = "Skill Picking"
alignment = 0
script = ExtResource("2_y2tof")
tutorial_description = "Cells in the game in which you can place your pieces at the start of each match"

[node name="TutorialContainer" type="Control" parent="OuterContainer/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="TutorialImageContainer" type="PanelContainer" parent="OuterContainer/SectionsContainer/TutorialContainer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -210.0
offset_top = 64.0
offset_right = 210.0
offset_bottom = 296.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wgpbp")
metadata/_edit_group_ = true

[node name="TutorialImage" type="TextureRect" parent="OuterContainer/SectionsContainer/TutorialContainer/TutorialImageContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_atk4j")

[node name="TutorialTitle" type="Label" parent="OuterContainer/SectionsContainer/TutorialContainer/TutorialImageContainer/TutorialImage"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 12.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(194, 0)
theme_override_font_sizes/font_size = 24
text = "Tutorial Title"
horizontal_alignment = 1

[node name="TutorialDescription" type="RichTextLabel" parent="OuterContainer/SectionsContainer/TutorialContainer/TutorialImageContainer/TutorialImage"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 54.0
offset_right = -10.0
offset_bottom = 194.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[fill]Tutorial description that details how an specific part of the game works o how a unit behaves in the match, this is only a placeholder as the true content of this node will be set programatically.[/fill]"
meta_underlined = false
